# deep-agent-demo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  opencode.json  pyproject.toml
memory/: AGENTS.md
skills/assistant/: SKILL.md
src/agent/: __init__.py
src/app/: __init__.py  config.py  dependencies.py  main.py
src/app/agents/: audio_model.py  factory.py  memory.py  prompts.py  tools.py
src/app/api/: audio.py  chat.py  health.py
src/app/schemas/: audio.py  chat.py  common.py
src/app/services/: audio_chat_service.py  audio_service.py  chat_service.py  conversation_service.py  openrouter_audio_service.py  stt_service.py  tts_preparation_service.py  tts_service.py
src/app/storage/: checkpoints.py  files.py
src/app/utils/: ids.py
streamlit_app/: api_client.py  app.py  components.py  state.py
tests/: test_agent_factory.py  test_audio_api.py  test_chat_api.py  test_services.py
